--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,9 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="maroon">#B91646</color>
+    <color name="teal_dark">#105652</color>
+    <color name="beige_light">#FBF3E4</color>
+    <color name="beige_dark">#DFD8CA</color>
 </resources>
